Archive2/39/36d993c6ab110b/output
main.cpp: In function 'std::string to_string(const T&)':
main.cpp:8:18: error: invalid use of incomplete type 'std::ostringstream {aka class std::basic_ostringstream<char>}'
     return stream.str();
                  ^
In file included from /usr/local/include/c++/4.9.2/bits/localefwd.h:41:0,
                 from /usr/local/include/c++/4.9.2/string:43,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/iosfwd:101:11: error: declaration of 'std::ostringstream {aka class std::basic_ostringstream<char>}'
     class basic_ostringstream;
           ^
